# reftab

./: LICENSE  README.md  pyproject.toml
src/reftab/: __main__.py  asciitable.py  csscolors.py  ibm437.py  main.py  term.py
src/reftab/data/: __init__.py  asciitable.py  ibm437.py  katex.py  vscodeshortcuts.py
tests/: test_term.py
