[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reftab"
version = "0.1.0"
authors = [{ name = "Violet Moore", email = "Pyroan@users.noreply.github.com" }]
description = "Quick Cheatsheets useful for Me And Me Alone <3"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3 :: Only",
]
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
reftab = "reftab.main:run"

[tool.pytest.ini_options]
addopts = ["-s", "--import-mode=importlib"]
